Korpus bereinigen durch entfernen von Wortliste - nicht abgeschlossen.

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -3601,8 +3601,6 @@
         "          next\n",
         "        elif sum(c.isdigit() for c in word)>1:\n",
         "          next\n",
-        "        elif word in ('csu', 'urticaria', 'patient', 'doi', 'study'):\n",
-        "          next\n",
         "        elif word not in stop_words:\n",
         "          filtered_text.append(word)\n",
         "        \n",
@@ -3663,6 +3661,87 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "hjUQ6ELhBLWv"
+      },
+      "source": [
+        "def removeWords(text):\n",
+        "  filtered_text=[]\n",
+        "  for word in text:\n",
+        "    if word in ('csu', 'urticaria', 'patient', 'doi', 'study', 'http', 'the', 'al'):\n",
+        "      next\n",
+        "    else:\n",
+        "      filtered_text.append(word)\n",
+        "  return filtered_text"
+      ],
+      "id": "hjUQ6ELhBLWv",
+      "execution_count": 87,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QTogJ6y6EOX4",
+        "outputId": "598362c2-3d94-4cc6-ae0a-7af3fddf77ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "removeWords(['csu', 'TEST', 'DOI', 'doi', 'al'])"
+      ],
+      "id": "QTogJ6y6EOX4",
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['TEST']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bS48mnZBEesp",
+        "outputId": "45107bab-83b8-4a31-d0df-76fc1e6769ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "normalize_text_punctuation('csu test Doi doi al')\n"
+      ],
+      "id": "bS48mnZBEesp",
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'test'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "xKqD-XOFY8Xd"
       },
       "source": [
@@ -3675,15 +3754,17 @@
         "  text = text.encode(\"utf-8\", \"ignore\").decode()\n",
         "\n",
         "  tokenized_text = regex_tokenizer.tokenize(text)\n",
+        "\n",
+        "  tokenized_text = removeWords(tokenized_text)\n",
         "  tokenized_text = stoppingFunc(tokenized_text)\n",
         "  #tokenized_text = stemmingFunc(tokenized_text)\n",
         "  tokenized_text = lemmatizingFunc(tokenized_text)\n",
-        "  \n",
+        "\n",
         "  text = \" \".join(tokenized_text)\n",
         "  return text"
       ],
       "id": "xKqD-XOFY8Xd",
-      "execution_count": 13,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -3696,10 +3777,13 @@
         "\n",
         "def normalize_text_punctuation(text):\n",
         "  # lowercase text\n",
-        "  # text = str(text).lower()\n",
+        "  text = str(text).lower()\n",
         "  # remove non-UTF\n",
         "  text = text.encode(\"utf-8\", \"ignore\").decode()\n",
+        "\n",
         "  tokenized_text = regex_tokenizer2.tokenize(text)\n",
+        "\n",
+        "  ttokenized_text = removeWords(tokenized_text)\n",
         "  tokenized_text = stoppingFunc(tokenized_text)\n",
         "  #tokenized_text = stemmingFunc(tokenized_text)\n",
         "  tokenized_text = lemmatizingFunc(tokenized_text)\n",
@@ -3708,7 +3792,7 @@
         "  return text"
       ],
       "id": "gscPA6PaHS-f",
-      "execution_count": 17,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -3733,7 +3817,7 @@
         "df['Corpus_w_Punctuation'] = df['Content'].apply(lambda c: normalize_text_punctuation(c))"
       ],
       "id": "EQ-PJE_p_K7g",
-      "execution_count": 15,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -3742,15 +3826,15 @@
         "id": "HhxYmjBJ2iYG",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 589
         },
-        "outputId": "cbdc5939-a45e-4f47-df50-30344cf8a1fd"
+        "outputId": "a763c847-7a33-4aa5-a3fb-e1a9502ab6ce"
       },
       "source": [
         "df"
       ],
       "id": "HhxYmjBJ2iYG",
-      "execution_count": 16,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3790,7 +3874,7 @@
               "      <td>BAT, BHRA, Basophil, Severity, Angioedema</td>\n",
               "      <td>youpuap AB1a]|p poo\\n\\nS\\nw\\no\\na\\nw\\n®\\nY\\na...</td>\n",
               "      <td>youpuap ab1a poo sixd detection basophil activ...</td>\n",
-              "      <td>youpuap AB1a poo sIxD Detection basophil activ...</td>\n",
+              "      <td>youpuap ab1a poo sixd detection basophil activ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -3799,7 +3883,7 @@
               "      <td>BAT, Cyclosporine, BHRA, Severity, Basophil, A...</td>\n",
               "      <td>British Journal of Dermatology 2000; 143: 365-...</td>\n",
               "      <td>british journal dermatology randomized double ...</td>\n",
-              "      <td>British Journal Dermatology Randomized double ...</td>\n",
+              "      <td>british journal dermatology randomized double ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -3808,7 +3892,7 @@
               "      <td>Severity, Duration, Allergic Diseases, Angioedema</td>\n",
               "      <td>The persistence of chronic spontaneous urticar...</td>\n",
               "      <td>persistence chronic spontaneous childhood asso...</td>\n",
-              "      <td>The persistence chronic spontaneous childhood ...</td>\n",
+              "      <td>persistence chronic spontaneous childhood asso...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -3817,7 +3901,7 @@
               "      <td>Angioedema, Omalizumab</td>\n",
               "      <td>Received Date: 29-Sep-2016\\nAccepted Date: 22-...</td>\n",
               "      <td>received date sep accepted date nov article ty...</td>\n",
-              "      <td>Received Date Sep Accepted Date Nov Article Ty...</td>\n",
+              "      <td>received date sep accepted date nov article ty...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -3826,7 +3910,7 @@
               "      <td>Severity, Omalizumab</td>\n",
               "      <td>Check for\\nupdates\\n\\nPROF. MARCUS MAURER (Orc...</td>\n",
               "      <td>check update prof marcus maurer orcid article ...</td>\n",
-              "      <td>Check update PROF. MARCUS MAURER Orcid Article...</td>\n",
+              "      <td>check update prof. marcus maurer orcid article...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -3853,7 +3937,7 @@
               "      <td>Duration, Angioedema</td>\n",
               "      <td>| ®\\nAccepted: 11 September 2020.\\n\\nCheck for...</td>\n",
               "      <td>accepted september check update received july ...</td>\n",
-              "      <td>Accepted September Check update Received July ...</td>\n",
+              "      <td>accepted september check update received july ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>451</th>\n",
@@ -3862,7 +3946,7 @@
               "      <td>Basophil, Omalizumab</td>\n",
               "      <td>Accepted Manuscript\\n\\nJOURNAL OF INVESTIGATIV...</td>\n",
               "      <td>accepted manuscript journal investigative derm...</td>\n",
-              "      <td>Accepted Manuscript JOURNAL INVESTIGATIVE DERM...</td>\n",
+              "      <td>accepted manuscript journal investigative derm...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>452</th>\n",
@@ -3871,7 +3955,7 @@
               "      <td>Severity, Omalizumab</td>\n",
               "      <td>doi:10.1684/ejd.2017.3085\\n\\nReview\\n\\nMarta F...</td>\n",
               "      <td>ejd review marta ferrer isabelle boccon gibod ...</td>\n",
-              "      <td>ejd. Review Marta FERRER Isabelle BOCCON GIBOD...</td>\n",
+              "      <td>ejd. review marta ferrer isabelle boccon gibod...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>453</th>\n",
@@ -3880,7 +3964,7 @@
               "      <td>Allergic Diseases, Omalizumab</td>\n",
               "      <td>Journal of Asthma and Allergy\\n\\n3\\n\\nDove\\n\\n...</td>\n",
               "      <td>journal asthma allergy dove original research ...</td>\n",
-              "      <td>Journal Asthma Allergy Dove ORIGINAL RESEARCH ...</td>\n",
+              "      <td>journal asthma allergy dove original research ...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -3889,17 +3973,17 @@
             ],
             "text/plain": [
               "     Authors  ...                               Corpus_w_Punctuation\n",
-              "0     Swerdt  ...  youpuap AB1a poo sIxD Detection basophil activ...\n",
-              "1    Grattan  ...  British Journal Dermatology Randomized double ...\n",
-              "2       Arik  ...  The persistence chronic spontaneous childhood ...\n",
-              "3     Maurer  ...  Received Date Sep Accepted Date Nov Article Ty...\n",
-              "4       Metz  ...  Check update PROF. MARCUS MAURER Orcid Article...\n",
+              "0     Swerdt  ...  youpuap ab1a poo sixd detection basophil activ...\n",
+              "1    Grattan  ...  british journal dermatology randomized double ...\n",
+              "2       Arik  ...  persistence chronic spontaneous childhood asso...\n",
+              "3     Maurer  ...  received date sep accepted date nov article ty...\n",
+              "4       Metz  ...  check update prof. marcus maurer orcid article...\n",
               "..       ...  ...                                                ...\n",
               "449   Sterba  ...  jduosnueyy souiny yduosnueyy soulny jduosnueyy...\n",
-              "450     Nada  ...  Accepted September Check update Received July ...\n",
-              "451    Saini  ...  Accepted Manuscript JOURNAL INVESTIGATIVE DERM...\n",
-              "452   Ferrer  ...  ejd. Review Marta FERRER Isabelle BOCCON GIBOD...\n",
-              "453   Llanos  ...  Journal Asthma Allergy Dove ORIGINAL RESEARCH ...\n",
+              "450     Nada  ...  accepted september check update received july ...\n",
+              "451    Saini  ...  accepted manuscript journal investigative derm...\n",
+              "452   Ferrer  ...  ejd. review marta ferrer isabelle boccon gibod...\n",
+              "453   Llanos  ...  journal asthma allergy dove original research ...\n",
               "\n",
               "[454 rows x 6 columns]"
             ]
@@ -3907,7 +3991,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 92
         }
       ]
     },
@@ -3928,7 +4012,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7c5df8e7-2dfd-410b-bcd7-55a22b59ea31"
+        "outputId": "cc778e31-d1bc-4b17-dc61-e4a62ec87c6d"
       },
       "source": [
         "type(list(df['Tags']))\n",
@@ -3936,7 +4020,7 @@
         "print(*tags, sep=\"\\n\")"
       ],
       "id": "StvfVkx226jA",
-      "execution_count": 18,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "stream",
@@ -4007,7 +4091,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e67eb611-406d-41e1-9b63-3be42ae4ace2"
+        "outputId": "997465f0-00c7-4272-cce3-12ecbbf128b0"
       },
       "source": [
         "#Turn tags into a set for faster checking of whether a tag exists or not\n",
@@ -4016,44 +4100,44 @@
         "print(*unique_tags, sep=\"\\n\")\n"
       ],
       "id": "j0i46zY1sXJ2",
-      "execution_count": null,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "duration\n",
-            "Eosinophil\n",
-            "Antihistamine\n",
-            "BAT\n",
-            "ASST\n",
-            "Basophil count\n",
-            "Total IgE\n",
-            "Allergic Diseases\n",
-            "ANA\n",
-            "D-Dimer\n",
-            "Eosinophil count\n",
-            "angioedema\n",
-            "Omalizumab\n",
-            "Angioedema\n",
-            "Duration\n",
-            "Severity\n",
-            "Tissue factor\n",
-            "Cyclosporine\n",
-            "BHRA\n",
-            "anti-FcεRI\n",
-            "omalizumab\n",
             "Thyroglobulin\n",
-            "anti-TPO IgE ratio\n",
-            "thyroglobulin\n",
-            "IL-24\n",
-            "TPO\n",
-            "dsDNA\n",
             "Basophil\n",
-            "CRP\n",
+            "Eosinophil\n",
+            "thyroglobulin\n",
+            "Angioedema\n",
+            "IL-24\n",
+            "omalizumab\n",
             "cyclosporine\n",
-            "Anti-IgE\n",
+            "anti-TPO IgE ratio\n",
+            "D-Dimer\n",
+            "CRP\n",
+            "duration\n",
+            "serverity\n",
+            "dsDNA\n",
+            "BAT\n",
+            "angioedema\n",
+            "ANA\n",
+            "anti-FcεRI\n",
+            "Cyclosporine\n",
             "Ana\n",
-            "serverity\n"
+            "Omalizumab\n",
+            "Total IgE\n",
+            "Anti-IgE\n",
+            "Eosinophil count\n",
+            "Basophil count\n",
+            "TPO\n",
+            "Duration\n",
+            "Allergic Diseases\n",
+            "BHRA\n",
+            "Antihistamine\n",
+            "Tissue factor\n",
+            "Severity\n",
+            "ASST\n"
           ],
           "name": "stdout"
         }
@@ -4098,7 +4182,7 @@
         "  return (words, distinct_topics, topic_groups, existing_topics)"
       ],
       "id": "iMTf0IC6qfQi",
-      "execution_count": null,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -4107,10 +4191,10 @@
         "id": "wVjwSYTVvfKI"
       },
       "source": [
-        "words, distinct_topics, topic_groups, existing_topics = find_topics(df['Corpus'])"
+        "words, distinct_topics, topic_groups, existing_topics = find_topics(df['Corpus_w_Punctuation'])"
       ],
       "id": "wVjwSYTVvfKI",
-      "execution_count": null,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -4120,19 +4204,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "35b8ffc0-4f2f-4291-dac0-9cb28fc0ab72"
+        "outputId": "15b6728f-a51e-4f85-9885-0d07ff0fb88e"
       },
       "source": [
-        "sorted(distinct_topics)"
+        "sorted(distinct_topics)\n"
       ],
       "id": "0hlQ-SwUzDG1",
-      "execution_count": null,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['activity',\n",
+              "['activation',\n",
+              " 'al',\n",
               " 'allergen',\n",
               " 'allergic',\n",
               " 'allergy',\n",
@@ -4140,56 +4225,45 @@
               " 'anti',\n",
               " 'antibody',\n",
               " 'antihistamine',\n",
-              " 'article',\n",
+              " 'apst',\n",
               " 'asst',\n",
               " 'asthma',\n",
-              " 'autoimmune',\n",
-              " 'autologous',\n",
               " 'baseline',\n",
               " 'basophil',\n",
               " 'cell',\n",
-              " 'cetirizine',\n",
-              " 'change',\n",
-              " 'child',\n",
               " 'chronic',\n",
               " 'clin',\n",
               " 'clinical',\n",
+              " 'coagulation',\n",
               " 'control',\n",
-              " 'copyright',\n",
+              " 'dimer',\n",
               " 'disease',\n",
               " 'dose',\n",
-              " 'drug',\n",
-              " 'effect',\n",
-              " 'expression',\n",
-              " 'fceri',\n",
-              " 'fexofenadine',\n",
+              " 'eosinophil',\n",
+              " 'factor',\n",
+              " 'food',\n",
               " 'group',\n",
-              " 'guideline',\n",
               " 'histamine',\n",
+              " 'human',\n",
               " 'ige',\n",
-              " 'igg',\n",
               " 'immunol',\n",
               " 'level',\n",
-              " 'levocetirizine',\n",
               " 'life',\n",
+              " 'mast',\n",
               " 'mean',\n",
               " 'month',\n",
-              " 'nsaid',\n",
               " 'omalizumab',\n",
               " 'patient',\n",
+              " 'plasma',\n",
               " 'positive',\n",
-              " 'protected',\n",
-              " 'quality',\n",
               " 'release',\n",
-              " 'reserved',\n",
               " 'response',\n",
-              " 'result',\n",
-              " 'rhinitis',\n",
-              " 'right',\n",
               " 'score',\n",
               " 'serum',\n",
               " 'skin',\n",
+              " 'specific',\n",
               " 'spontaneous',\n",
+              " 'study',\n",
               " 'subject',\n",
               " 'symptom',\n",
               " 'test',\n",
@@ -4197,13 +4271,15 @@
               " 'thyroid',\n",
               " 'treatment',\n",
               " 'uas7',\n",
-              " 'week']"
+              " 'urticaria',\n",
+              " 'week',\n",
+              " 'year']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 97
         }
       ]
     },
