Anpassung des kmeans-Algorithmus auf k-means++ und max-iter=100 und verbose=1

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -2497,23 +2497,26 @@
       },
       "source": [
         "#@title Anzahl der Cluster gem. Elbow-Curve\n",
-        "k = 6#@param {type:\"integer\"}\n",
+        "k = 2#@param {type:\"integer\"}\n",
         "\n",
         "km = KMeans(n_clusters=k, init='k-means++', max_iter=100, n_init=1,\n",
         "                verbose=1)"
       ],
       "id": "3A6o-gMJYAKI",
-      "execution_count": 30,
+      "execution_count": 50,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mFrzxFPxYiIn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mFrzxFPxYiIn",
+        "outputId": "e91277f8-a82f-4715-e551-854f08239399"
       },
       "source": [
         "#https://scikit-learn.org/stable/auto_examples/text/plot_document_clustering.html\n",
-        "km = KMeans(n_clusters=k)\n",
         "km = km.fit(words_transformed)\n",
         "order_centroids = km.cluster_centers_.argsort()[:, ::-1]\n",
         "terms = tfidfconvert.get_feature_names()\n",
@@ -2526,18 +2529,41 @@
         "  clustered_words.append(words_per_cluster)"
       ],
       "id": "mFrzxFPxYiIn",
-      "execution_count": 35,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Initialization complete\n",
+            "Iteration  0, inertia 792.049\n",
+            "Iteration  1, inertia 403.922\n",
+            "Iteration  2, inertia 403.322\n",
+            "Iteration  3, inertia 402.123\n",
+            "Iteration  4, inertia 400.930\n",
+            "Iteration  5, inertia 400.069\n",
+            "Iteration  6, inertia 399.599\n",
+            "Iteration  7, inertia 399.340\n",
+            "Iteration  8, inertia 399.208\n",
+            "Iteration  9, inertia 399.119\n",
+            "Iteration 10, inertia 399.066\n",
+            "Iteration 11, inertia 399.026\n",
+            "Iteration 12, inertia 398.991\n",
+            "Iteration 13, inertia 398.976\n",
+            "Converged at iteration 13: center shift 0.000000e+00 within tolerance 5.630529e-09\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "poE8cdUgJnpI",
-        "outputId": "0b03c5c2-8f09-4a8c-ba83-ae6df3154caa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 669
-        }
+        },
+        "id": "poE8cdUgJnpI",
+        "outputId": "ac1b7520-373d-4c54-9218-81fbc1bc25a9"
       },
       "source": [
         "#clustered_words Liste transponieren\n",
@@ -2549,7 +2575,7 @@
         "df_clustered_words"
       ],
       "id": "poE8cdUgJnpI",
-      "execution_count": 46,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2575,227 +2601,141 @@
               "      <th></th>\n",
               "      <th>Cluster 1</th>\n",
               "      <th>Cluster 2</th>\n",
-              "      <th>Cluster 3</th>\n",
-              "      <th>Cluster 4</th>\n",
-              "      <th>Cluster 5</th>\n",
-              "      <th>Cluster 6</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>win</td>\n",
-              "      <td>score</td>\n",
-              "      <td>symptom</td>\n",
               "      <td>cell</td>\n",
-              "      <td>basophil</td>\n",
-              "      <td>week</td>\n",
+              "      <td>antihistamine</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>confounders</td>\n",
+              "      <td>basophil</td>\n",
               "      <td>week</td>\n",
-              "      <td>month</td>\n",
-              "      <td>control</td>\n",
-              "      <td>donor</td>\n",
-              "      <td>effect</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>lssv</td>\n",
-              "      <td>trial</td>\n",
-              "      <td>year</td>\n",
-              "      <td>factor</td>\n",
-              "      <td>cell</td>\n",
-              "      <td>case</td>\n",
+              "      <td>control</td>\n",
+              "      <td>month</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>ig</td>\n",
-              "      <td>antihistamine</td>\n",
-              "      <td>antihistamine</td>\n",
-              "      <td>level</td>\n",
-              "      <td>antibody</td>\n",
-              "      <td>antihistamine</td>\n",
+              "      <td>factor</td>\n",
+              "      <td>score</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>relapse</td>\n",
-              "      <td>effect</td>\n",
-              "      <td>guideline</td>\n",
               "      <td>test</td>\n",
-              "      <td>assay</td>\n",
-              "      <td>month</td>\n",
+              "      <td>guideline</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>ana</td>\n",
-              "      <td>day</td>\n",
-              "      <td>medication</td>\n",
-              "      <td>wheal</td>\n",
-              "      <td>serum</td>\n",
-              "      <td>therapy</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>apmg</td>\n",
-              "      <td>guideline</td>\n",
-              "      <td>week</td>\n",
-              "      <td>basophil</td>\n",
-              "      <td>autoantibody</td>\n",
-              "      <td>basophil</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>aseajas</td>\n",
-              "      <td>improvement</td>\n",
-              "      <td>adult</td>\n",
-              "      <td>value</td>\n",
-              "      <td>receptor</td>\n",
-              "      <td>efficacy</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>an9</td>\n",
-              "      <td>month</td>\n",
-              "      <td>drug</td>\n",
-              "      <td>correlation</td>\n",
-              "      <td>control</td>\n",
+              "      <td>level</td>\n",
               "      <td>trial</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>aseasig</td>\n",
-              "      <td>change</td>\n",
-              "      <td>rate</td>\n",
+              "      <th>6</th>\n",
+              "      <td>antibody</td>\n",
+              "      <td>effect</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
               "      <td>serum</td>\n",
+              "      <td>symptom</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>wheal</td>\n",
+              "      <td>day</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>difference</td>\n",
+              "      <td>therapy</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>autoantibody</td>\n",
+              "      <td>year</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>value</td>\n",
+              "      <td>medication</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>concentration</td>\n",
+              "      <td>treatment</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>assay</td>\n",
+              "      <td>drug</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>protein</td>\n",
+              "      <td>time</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>receptor</td>\n",
+              "      <td>case</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>correlation</td>\n",
+              "      <td>life</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>method</td>\n",
+              "      <td>outcome</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18</th>\n",
               "      <td>subject</td>\n",
               "      <td>response</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>dnou8</td>\n",
-              "      <td>outcome</td>\n",
-              "      <td>corticosteroid</td>\n",
-              "      <td>difference</td>\n",
-              "      <td>incubated</td>\n",
-              "      <td>drug</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>enba</td>\n",
-              "      <td>symptom</td>\n",
-              "      <td>test</td>\n",
-              "      <td>marker</td>\n",
-              "      <td>igg</td>\n",
-              "      <td>reduction</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>12</th>\n",
-              "      <td>fep</td>\n",
-              "      <td>therapy</td>\n",
-              "      <td>case</td>\n",
-              "      <td>antibody</td>\n",
-              "      <td>human</td>\n",
-              "      <td>omalizumab</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>aseo</td>\n",
-              "      <td>period</td>\n",
-              "      <td>treatment</td>\n",
-              "      <td>concentration</td>\n",
-              "      <td>test</td>\n",
-              "      <td>effective</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>seo</td>\n",
-              "      <td>measure</td>\n",
-              "      <td>diagnosis</td>\n",
-              "      <td>autoantibody</td>\n",
-              "      <td>concentration</td>\n",
-              "      <td>cost</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>15</th>\n",
-              "      <td>sasdejai</td>\n",
-              "      <td>efficacy</td>\n",
-              "      <td>population</td>\n",
-              "      <td>method</td>\n",
-              "      <td>functional</td>\n",
-              "      <td>dose</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>16</th>\n",
-              "      <td>asesane</td>\n",
-              "      <td>treatment</td>\n",
-              "      <td>day</td>\n",
-              "      <td>activation</td>\n",
-              "      <td>level</td>\n",
-              "      <td>cell</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>17</th>\n",
-              "      <td>uedo</td>\n",
-              "      <td>safety</td>\n",
-              "      <td>report</td>\n",
-              "      <td>response</td>\n",
-              "      <td>experiment</td>\n",
-              "      <td>year</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>18</th>\n",
-              "      <td>ueew</td>\n",
-              "      <td>time</td>\n",
-              "      <td>time</td>\n",
-              "      <td>autologous</td>\n",
-              "      <td>release</td>\n",
-              "      <td>treatment</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
               "      <th>19</th>\n",
-              "      <td>ys9</td>\n",
-              "      <td>visit</td>\n",
-              "      <td>analysis</td>\n",
-              "      <td>protein</td>\n",
               "      <td>reaction</td>\n",
-              "      <td>administration</td>\n",
+              "      <td>omalizumab</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "      Cluster 1      Cluster 2  ...      Cluster 5       Cluster 6\n",
-              "0           win          score  ...       basophil            week\n",
-              "1   confounders           week  ...          donor          effect\n",
-              "2          lssv          trial  ...           cell            case\n",
-              "3            ig  antihistamine  ...       antibody   antihistamine\n",
-              "4       relapse         effect  ...          assay           month\n",
-              "5           ana            day  ...          serum         therapy\n",
-              "6          apmg      guideline  ...   autoantibody        basophil\n",
-              "7       aseajas    improvement  ...       receptor        efficacy\n",
-              "8           an9          month  ...        control           trial\n",
-              "9       aseasig         change  ...        subject        response\n",
-              "10        dnou8        outcome  ...      incubated            drug\n",
-              "11         enba        symptom  ...            igg       reduction\n",
-              "12          fep        therapy  ...          human      omalizumab\n",
-              "13         aseo         period  ...           test       effective\n",
-              "14          seo        measure  ...  concentration            cost\n",
-              "15     sasdejai       efficacy  ...     functional            dose\n",
-              "16      asesane      treatment  ...          level            cell\n",
-              "17         uedo         safety  ...     experiment            year\n",
-              "18         ueew           time  ...        release       treatment\n",
-              "19          ys9          visit  ...       reaction  administration\n",
-              "\n",
-              "[20 rows x 6 columns]"
+              "        Cluster 1      Cluster 2\n",
+              "0            cell  antihistamine\n",
+              "1        basophil           week\n",
+              "2         control          month\n",
+              "3          factor          score\n",
+              "4            test      guideline\n",
+              "5           level          trial\n",
+              "6        antibody         effect\n",
+              "7           serum        symptom\n",
+              "8           wheal            day\n",
+              "9      difference        therapy\n",
+              "10   autoantibody           year\n",
+              "11          value     medication\n",
+              "12  concentration      treatment\n",
+              "13          assay           drug\n",
+              "14        protein           time\n",
+              "15       receptor           case\n",
+              "16    correlation           life\n",
+              "17         method        outcome\n",
+              "18        subject       response\n",
+              "19       reaction     omalizumab"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 52
         }
       ]
     },
