Div Anpassungen (zB. pip install bertopic an den Anfang gezogen)

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -52,6 +52,7 @@
         "!pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_core_sci_sm-0.4.0.tar.gz\n",
         "\n",
         "!pip install wordcloud\n",
+        "!pip install bertopic[all]\n",
         "\n",
         "!pip install -q numpy\n",
         "!pip install -q pandas\n",
@@ -867,7 +868,6 @@
         "id": "xdOCH0kszsfi"
       },
       "source": [
-        "!pip3 install bertopic\n",
         "from bertopic import BERTopic"
       ],
       "id": "xdOCH0kszsfi",
@@ -881,7 +881,7 @@
       },
       "source": [
         "topic_model = BERTopic(language=\"english\", calculate_probabilities=True) # We need the probabilities to visualize\n",
-        "topics, _ = topic_model.fit_transform(list(df['Corpus_w_Punctuation']))"
+        "topics = topic_model.fit_transform(list(df['Corpus_w_Punctuation']))"
       ],
       "id": "ELTFNj8VXCAQ",
       "execution_count": null,
